--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   height: 100vh;
   overflow-x: hidden;
-  background: rgb(0, 0, 0);
+  background: rgba(89, 131, 93, 0.975);
 }
 
 .container {
@@ -75,7 +75,7 @@ h3 {
   position: fixed;
   top: 0;
   z-index: 1;
-  background: #020113;
+  background: #0a3c0a;
   min-height: 40px;
   width: 100%;
 }
@@ -91,13 +91,14 @@ h3 {
 .nav-links a {
   display: block;
   text-align: center;
-  background: #040916;
-  border: 1px solid #121e33;
-  color: #fff;
+  background: rgba(89, 131, 93, 0.975);
+  border: 1px solid #135721;
+  color: #e9e9e9;
   font-size: 20px;
   padding: 10px 20px;
   text-decoration: none;
   transition: all 0.4s ease;
+  border-radius: 10px;
 }
 
 ul li.active a,
@@ -111,32 +112,8 @@ ul li a:hover,
   display: none;
 }
 
-.navbar-toggle {
-  background: #333;
-  position: relative;
-  float: right;
-  padding: 5px 7px 9px 7px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  margin: 8px 20px 8px;
-  cursor: pointer;
-  outline: none;
-  z-index: 10;
-}
-
-.icon-bar {
-  display: block;
-  width: 22px;
-  height: 1px;
-  border-radius: 1px;
-  background-color: #f1f1f1;
-  margin-top: 4px;
-  padding: 1px 5px;
-  transition: all 0.3s ease;
-}
-
 #header-area {
-  background: url(../img/o2.jpeg) no-repeat;
+  background: url(../img/t3.jpeg) no-repeat;
   background-size: cover;
   background-position: bottom;
   padding: 235px 0;
@@ -159,7 +136,7 @@ ul li a:hover,
 
 #feature-area {
   padding-top: 70px;
-  background: #000109;
+  background: rgba(89, 131, 93, 0.975);
 }
 
 #feature-area .container {
@@ -173,7 +150,7 @@ ul li a:hover,
   overflow: hidden;
   text-align: center;
   max-width: 30%;
-  background: #a7a2b6;
+  background: #a6bfac;
 }
 
 .feature-content a {
@@ -211,7 +188,8 @@ ul li a:hover,
 }
 
 .purple-text {
-  color: #591a7e;
+  color: #0a3c0a;
+  font-size: x-large;
 }
 
 
@@ -224,13 +202,13 @@ ul li a:hover,
 
 .info-content {
   display: inline-block;
-  background: #a7a2b6;
+  background: #a6bfac;
   margin: 0 15px;
   padding-bottom: 40px;
   max-width: 555px;
 }
 .info-content h2 {
-  color: #591a7e;
+  color: #0a3c0a;
 }
 .info-content p {
   padding: 27px;
@@ -245,7 +223,7 @@ ul li a:hover,
   font-size: 50px;
   font-weight:bolder;
   margin-bottom: 60px;
-  color: rgb(101, 73, 130);
+  color: #0a3c0a;
   float: left;
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
@@ -253,7 +231,7 @@ ul li a:hover,
 
 #astro-area {
   margin: 60px 0;
-  background: rgb(0, 0, 0);
+  background: rgba(89, 131, 93, 0.975);
 }
 
 #astro-area .container {
@@ -264,10 +242,10 @@ ul li a:hover,
 }
 
 h2 {
-  color: #591a7e;
+  color: #0a3c0a;
 }
 .astro-content {
-  background-color:#a7a2b6;
+  background-color:#a6bfac;
   height: 510px;
   max-width: 260px;
   margin: 0 15px 30px 15px;
@@ -299,7 +277,7 @@ h2 {
 .galaxy-box {
   width: 100%;
   margin: 0 15px;
-  background: #a7a2b6;
+  background: #a6bfac;
 }
 
 .galaxy-box-description {
@@ -331,7 +309,7 @@ h2 {
 #contact-area h1 {
   font-size: 40px;
   font-weight: 400;
-  color: rgb(87, 77, 193);
+  color: #0a3c0a;
   margin-bottom: 30px;
 }
 
@@ -363,7 +341,7 @@ h2 {
   line-height: 1.5;
   border-radius: 5px;
   border: none;
-  background: rgba(87, 107, 162, 0.4);
+  background: rgba(45, 75, 54, 0.4);
   transition: ease-in-out 0.20s;
   outline: none;
 }
@@ -374,7 +352,7 @@ input {
 
 input::placeholder,
 textarea::placeholder {
-  color: rgb(87, 77, 193)
+  color: #0a3c0a;
 }
 
 textarea {
@@ -385,7 +363,7 @@ textarea {
 
 .form-right button {
   width: 30%;
-  background: rgb(87, 77, 193);
+  background: #0a3c0a;
   color:white;
   margin-top: 20px;
   padding: 10px 30px;
